--- a/MasterPage.Master
+++ b/MasterPage.Master
@@ -22,7 +22,7 @@
                         <%--Logo--%>
                         <telerik:LayoutColumn Span="2" SpanMd="3" SpanSm="12" SpanXs="12">
                             <a href="#" class="logo">
-                                <img src="images/logo.png" alt="site logo"/>
+                                <img src="images/china_cock.png" alt="site logo"/>
                             </a>
                         </telerik:LayoutColumn>
 
@@ -30,12 +30,16 @@
                         <telerik:LayoutColumn Span="10" SpanMd="9" SpanSm="12" SpanXs="12">
                             <telerik:RadMenu ID="RadMenu1" runat="server" RenderMode="Auto">
                                 <Items>
-                                    <telerik:RadMenuItem Text="Home" NavigateUrl="Default.aspx" />
+                                    <telerik:RadMenuItem Text="Главная" NavigateUrl="Home.aspx" />
                                     <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="Grid Page" NavigateUrl="Grid.aspx" />
+                                    <telerik:RadMenuItem Text="Основная информация" NavigateUrl="Archive.aspx" />
                                     <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="ListView Page" NavigateUrl="ListView.aspx" />
+                                    <telerik:RadMenuItem Text="Сотрудники" NavigateUrl="Sensors.aspx" />
                                     <telerik:RadMenuItem IsSeparator="true" />
+                                    <telerik:RadMenuItem Text="Графики" NavigateUrl="ChartPage.aspx" />
+                                    <telerik:RadMenuItem IsSeparator="true" />
+                                    <telerik:RadMenuItem Text="Выход" NavigateUrl="LogOut.aspx" />
+                                    <%--<telerik:RadMenuItem IsSeparator="true" />
                                     <telerik:RadMenuItem Text="About" />
                                     <telerik:RadMenuItem IsSeparator="true" />
                                     <telerik:RadMenuItem Text="Projects" />
@@ -46,7 +50,7 @@
                                     <telerik:RadMenuItem IsSeparator="true" />
                                     <telerik:RadMenuItem Text="..." />
                                     <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="Contacts" />
+                                    <telerik:RadMenuItem Text="Contacts" />--%>
                                 </Items>
                             </telerik:RadMenu>
                         </telerik:LayoutColumn>
@@ -96,7 +100,7 @@
                     <Columns>
                         <telerik:LayoutColumn CssClass="footer">
                             <hr />
-                            Footer: © 2002-2015 Company Inc, 201 Jones Rd, Waltham, MA 03451
+                            
                         </telerik:LayoutColumn>
                     </Columns>
                 </telerik:LayoutRow>
