--- a/MasterPage.Master
+++ b/MasterPage.Master
@@ -22,7 +22,7 @@
                         <%--Logo--%>
                         <telerik:LayoutColumn Span="2" SpanMd="3" SpanSm="12" SpanXs="12">
                             <a href="#" class="logo">
-                                <img src="images/china_cock.png" alt="site logo"/>
+                                <img src="images/logo_akadem.png" alt="site logo"/>
                             </a>
                         </telerik:LayoutColumn>
 
@@ -32,9 +32,9 @@
                                 <Items>
                                     <telerik:RadMenuItem Text="Главная" NavigateUrl="Home.aspx" />
                                     <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="Основная информация" NavigateUrl="Archive.aspx" />
+                                    <telerik:RadMenuItem Text="Основная информация" NavigateUrl="Dossier.aspx" />
                                     <telerik:RadMenuItem IsSeparator="true" />
-                                    <telerik:RadMenuItem Text="Сотрудники" NavigateUrl="Sensors.aspx" />
+                                    <telerik:RadMenuItem Text="Сотрудники" NavigateUrl="Employees.aspx" />
                                     <telerik:RadMenuItem IsSeparator="true" />
                                     <telerik:RadMenuItem Text="Выход" NavigateUrl="LogOut.aspx" />
                                     <%--<telerik:RadMenuItem IsSeparator="true" />
