--- a/MasterPage.Master
+++ b/MasterPage.Master
@@ -36,6 +36,8 @@
                                     <telerik:RadMenuItem IsSeparator="true" />
                                     <telerik:RadMenuItem Text="Сотрудники" NavigateUrl="Employees.aspx" />
                                     <telerik:RadMenuItem IsSeparator="true" />
+                                    <telerik:RadMenuItem Text="Админ панель" NavigateUrl="Admin/Default.aspx" />
+                                    <telerik:RadMenuItem IsSeparator="true" />
                                     <telerik:RadMenuItem Text="Выход" NavigateUrl="LogOut.aspx" />
                                     <%--<telerik:RadMenuItem IsSeparator="true" />
                                     <telerik:RadMenuItem Text="About" />
